Fixed button misalignment

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ input{
     padding: 15px 50px 15px 15px;
     font-size: 16px;
     border-radius: 30px;
-    text-align:center;
+    text-align: center;
     border: 0;
     width: 400px;
 }
@@ -67,6 +67,7 @@ button{
 #input{
     position:absolute;
     top:80vh;
+    left: 38vw;
     width: 150px;
 }
 .response{
@@ -94,7 +95,7 @@ button{
 .random{
     position:absolute;
     top: 80vh;
-    left: 60vw;
+    left: 53vw;
 }
 
 .reset{
